--- a/README
+++ b/README
@@ -59,3 +59,8 @@ This project is an IoT LED controller based on the ESP32-S3, designed for addres
 
 MIT License
 
+For questions or support, open an issue or contact the [Gibson Oluka](http://github.com/OlukaGibson)
+To reach me on other socials
+[x.com](https://x.com/OlsGibson)
+[youtube](https://www.youtube.com/@theemusicNmovies)
+[insta](https://www.instagram.com/olsgibson/)
